--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MikroTik Website IP Static Routing (Policy Based Routing) Generator - BuanaNETPBun.Github.io</title>
-    <meta content='MikroTik Policy Based Routing (PBR) or Static Routing Generator - BuanaNETPBun.Github.io' name='description'>
+    <title>MikroTik: Website IP Static Routing (Policy Based Routing) Generator - BuanaNETPBun.Github.io</title>
+    <meta content='MikroTik: Policy Based Routing (PBR) or Static Routing Generator - BuanaNETPBun.Github.io' name='description'>
     <meta content='block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="MikroTik Website IP Static Routing (Policy Based Routing) Generator By BuanaNET-Pbun">
-    <meta property="og:description" content="MikroTik Website IP Static Routing (Policy Based Routing) Generator By BuanaNET-Pbun">
+    <meta property="og:title" content="MikroTik: Website IP Static Routing (Policy Based Routing) Generator By BuanaNET-Pbun">
+    <meta property="og:description" content="MikroTik: Website IP Static Routing (Policy Based Routing) Generator By BuanaNET-Pbun">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/156810656-f4e55c11-c12d-4db0-a626-afb22cd03fd9.png">
-    <meta property="og:image:alt" content="MikroTik Website IP Static Routing (Policy Based Routing) Generator By BuanaNET-Pbun">
+    <meta property="og:image:alt" content="MikroTik: Website IP Static Routing (Policy Based Routing) Generator By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/policy-based-routing-website.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
@@ -19,7 +19,7 @@
     <style>
       /* ------------------------------------------------------------------
       #####################################################################
-      # MikroTik Website IP Static Routing (Policy Based Routing) Generator
+      # MikroTik: Website IP Static Routing (Policy Based Routing) Generator
       # Designer  : Agus Ramadhani / BuanaNET.Pbun
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
@@ -374,7 +374,7 @@
         </div>
       </div>
       <div class="header">
-        <h1>MIKROTIK WEBSITE <span style='color: #ff6600;'>IP STATIC ROUTING (POLICY BASED ROUTING)</span></h1>
+        <h1>MIKROTIK: WEBSITE <span style='color: #ff6600;'>IP STATIC ROUTING (POLICY BASED ROUTING)</span></h1>
       </div>
       <div class="sidebar">
         <div style="width:260px;float:left"><label>Target IP Gateway ISP / VPN</label> 
