--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -408,7 +408,7 @@
                   <input type="text" id="input-username" value="mycafe" placeholder="username">
                   </span>
                   <label >Password / Wi-Fi Key</label><br>
-                  <input style='margin-top:5px' type="text" id="input-password" value="7788" placeholder="Password">
+                  <input style='margin-top:5px' type="text" id="input-password" value="12345678" placeholder="Password">
                </div>
                <button style="margin-bottom: 20px;" type="button" onclick="myFunctionInput()">Generate QR Code</button>
                <div style="clear: both;"></div>
