--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -25,7 +25,7 @@
       <style>
          /* -----------------------------------------------------------------
          ####################################################################
-         # FREE HOTSPOT AND WI-FI QR CODE GENERATOR
+         # FREE HOTSPOT AND FREE WI-FI QR CODE GENERATOR
          # Designer  : Agus Ramadhani / BuanaNET
          # Github    : https://github.com/buananetpbun
          # Site      : http://www.o-om.com
@@ -379,7 +379,7 @@
             <a href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
          </div>
          <div class="header">
-            <h1>FREE HOTSPOT AND WI-FI <span style="color:#ff6600">QR</span> CODE GENERATOR</h1>
+            <h1>FREE HOTSPOT AND FREE WI-FI <span style="color:#ff6600">QR CODE</span> GENERATOR</h1>
          </div>
          <div class="main-wrap">
             <div class="sidebar">
