--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lrsjng.jquery-qrcode/0.14.0/jquery-qrcode.min.js" type="text/javascript"></script>
     <script src="//buananetpbun.github.io/qr-code/printThis.js" type="text/javascript"></script>
-		<script src="//buananetpbun.github.io/easy.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="//buananetpbun.github.io/qr-code/easy.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="prefetch" href="//buananetpbun.github.io/qr-code/A5.png">
 	<link rel="prefetch" href="//buananetpbun.github.io/qr-code/A6.png">
 	<link rel="prefetch" href="//buananetpbun.github.io/qr-code/A7.png">
