--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Free Hotspot and Wi-Fi QR Code Generator - BuanaNETPBun.Github.io</title>
-    <meta content='Free Hotspot and Wi-Fi QR Code Script Generator - BuanaNETPBun.Github.io' name='description'>
+    <title>Free Hotspot Wi-Fi QR Code Generator - BuanaNETPBun.Github.io</title>
+    <meta content='Free Hotspot Wi-Fi QR Code Script Generator - BuanaNETPBun.Github.io' name='description'>
     <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Free Hotspot and Wi-Fi QR Code Generator By BuanaNET-Pbun">
-    <meta property="og:description" content="Free Hotspot and Wi-Fi QR Code Generator By BuanaNET-Pbun">
+    <meta property="og:title" content="Free Hotspot Wi-Fi QR Code Generator By BuanaNET-Pbun">
+    <meta property="og:description" content="Free Hotspot Wi-Fi QR Code Generator By BuanaNET-Pbun">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/185570614-f8e5d4b2-c09e-46ab-ab96-e565e5a82d40.png">
-    <meta property="og:image:alt" content="Free Hotspot and Wi-Fi QR Code Generator By BuanaNET-Pbun">
+    <meta property="og:image:alt" content="Free Hotspot Wi-Fi QR Code Generator By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
@@ -26,7 +26,7 @@
     <style>
       /* -----------------------------------------------------------------
       ####################################################################
-      # FREE HOTSPOT AND WI-FI QR CODE GENERATOR
+      # FREE HOTSPOT WI-FI QR CODE GENERATOR
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://github.com/buananetpbun
       # Site      : http://www.o-om.com
@@ -380,7 +380,7 @@ background:#fff
         <a href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
       </div>
       <div class="header">
-        <h1>FREE HOTSPOT AND WI-FI <span style="color:#ff6600">QR</span> CODE GENERATOR</h1>
+        <h1>FREE HOTSPOT WI-FI <span style="color:#ff6600">QR</span> CODE GENERATOR</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
