--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -429,7 +429,7 @@ background:#fff
             <span class="ssid" id="text-ssid"><span style="color:#E12D00;">MYCAFE-WIFI</span></span>
             <img id="myImage" src="//buananetpbun.github.io/qr-code/A5.png" alt="QR CODE WIFI GENERATOR">
           </div>
-          <span style="font-size:12px"><b>Result: <span style="color:#ff6600" id="result">https://buananetpbun.github.io</span></b></span>
+          <span style="font-size:12px"><b>QR Result: <span style="color:#ff6600" id="result">https://buananetpbun.github.io</span></b></span>
         </div>
       </div>
       <div class="footer">
