--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -392,7 +392,7 @@ background:#fff
               <select id="input-encryption" onchange="myFunctionInput()">
                 <option value="WPA">WPA / WPA2</option>
                 <option value="WEP">WEP</option>
-                <option value="nopass">None</option>
+                <option value="nopass">Not Secured</option>
               </select>
             </span>
             <label>SSID / Network</label>
