--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -388,14 +388,14 @@ background:#fff
             </select>
 
             <span id="hide1" style="display:none">
-              <label>Wi-Fi Encryption</label>
+              <label>Wi-Fi Encryption Type</label>
               <select id="input-encryption" onchange="myFunctionInput()">
                 <option value="WPA">WPA / WPA2</option>
                 <option value="WEP">WEP</option>
                 <option value="nopass">Not Secured</option>
               </select>
             </span>
-            <label>SSID / Network</label>
+            <label>*SSID (Network id)</label>
             <input style='margin-top:5px' type="text" id="input-ssid" value="MYCAFE-WIFI" placeholder="Your Name SSID">
             <span id="hide2">
             <label>Hotspot DNS Name</label>
