--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -395,7 +395,7 @@ background:#fff
                 <option value="nopass">Not Secured (none)</option>
               </select>
             </span>
-            <label>*SSID (Network id)</label>
+            <label>SSID / Network id</label>
             <input style='margin-top:5px' type="text" id="input-ssid" value="MYCAFE-WIFI" placeholder="Your Name SSID">
             <span id="hide2">
             <label>Hotspot DNS Name</label>
