--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -17,8 +17,8 @@
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="//buananetpbun.github.io/qr-code/printThis.js" type="text/javascript"></script>
-	<script src="//buananetpbun.github.io/qr-code/easy.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://buananetpbun.github.io/qr-code/printThis.js" type="text/javascript"></script>
+	<script src="https://buananetpbun.github.io/qr-code/easy.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
     <style>
       /* -----------------------------------------------------------------
       ####################################################################
