--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -22,7 +22,7 @@
     <style>
       /* -----------------------------------------------------------------
       ####################################################################
-      # FREE HOTSPOT WI-FI QR CODE GENERATOR
+      # FREE HOTSPOT AND WI-FI QR CODE GENERATOR
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://github.com/buananetpbun
       # Site      : http://www.o-om.com
@@ -258,7 +258,7 @@
       margin-top:8px;
       margin-bottom:8px;
       border-radius:4px;
-background:#fff
+	  background:#fff
       }
       table, tr, td {
       border: none;
