--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -385,20 +385,20 @@
       <div class="main-wrap">
         <div class="sidebar">
           <div style="margin-bottom:10px; height:auto">
-            <label>Wireless Router Option</label>
+            <label>Wireless Router Options</label>
             <select id="input-wifi-option" onchange="myFunctionInput()">
               <option value="wifi-hotspot">MikroTik Hotspot</option>
               <option value="wifi-non-hotspot">Wireless Router Only</option>
             </select>
             <span id="hide1" style="display:none">
-              <label>Wi-Fi Encryption</label>
+              <label>Wi-Fi Encryption Type</label>
               <select id="input-encryption" onchange="myFunctionInput()">
                 <option value="WPA">WPA / WPA2</option>
                 <option value="WEP">WEP</option>
-                <option value="nopass">None</option>
+                <option value="nopass">None (not secured)</option>
               </select>
             </span>
-            <label>SSID / Network</label>
+            <label>SSID / Network id</label>
             <input style='margin-top:5px' type="text" id="input-ssid" value="MYCAFE-WIFI" placeholder="Your Name SSID">
             <span id="hide2">
             <label>Hotspot DNS Name</label>
