--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@ cursor: pointer;
 		<p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Queue Tree Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ Generator For Queue Tree And Queue Simple</a> - Mikrotik PCQ Generator For Queue Tree And Queue Simple, very easy</p>
 		<div style="margin-top:15px"><b>☰ HOTSPOT + PPPOE</b></div>
+	    <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code Generator</a> - Free Hotspot Wi-Fi QR Code Generator for MikroTik hotspot or wireless router only user WEP and WPA/WPA2</p>
 	     <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot Or Local Connections With Change TTL</a> - Mikrotik Block Sharing Hotspot Or Local Connections With Change TTL / Hotspot Anti Tethering </p>      
 	    <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Hotspot Wizard Script Generator</a> - Make a easy with Mikrotik hotspot Wizard Generator tool for hotspot configuration with 3 step</p>      
 		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Username Password Hotspot Generator</a> - Mikrotik Create Username Password Hotspot Voucher Generator</p>		
