--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
+	<script src="//connect.facebook.net/en_US/all.js"></script>
     <style>
       /* --------------------------------------------
       ################################################
