--- a/index.html
+++ b/index.html
@@ -362,6 +362,10 @@
       .gsc-input-box {border-radius:5px; height:33px;background:#fff !important;margin-right: -6px !important; line-height:normal !important}
       .gsc-search-button-v2 {border-radius:5px !important; height:33px !important;}
       .gsc-control-cse {background:#f9f9f9 !important;border:none !important; clear: both;}
+	        div#container_notlike, div#container_like {
+        display: none;
+      }
+	  
     </style>
   </head>
   <body onLoad="callmodal()">
