--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
       window.fbAsyncInit = function() {
         FB.init({
           appId      : '790955851517978', // App ID
-          channelUrl : 'https://buananetpbun.github.io/index.html', // Channel File
+          channelUrl : 'https://buananetpbun.github.io', // Channel File
           status     : true, // check login status
           cookie     : true, // enable cookies to allow the server to access the session
           xfbml      : true  // parse XFBML
