--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -558,7 +558,7 @@
       </div>
     </div>
     <div id="myLogin" class="modal-login">
-      <div class="modal-content">
+      <div id="modal-content" class="modal-content">
         <div class="forms-out">
           <div class="forms-in">
             <div id="registration-page" class="hide">
