--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -762,7 +762,7 @@
         document.querySelector("#registration-page").classList.add("hide");
         document.querySelector("#login-page").classList.add("hide");
         document.querySelector("#homepage").classList.remove("hide");
-		document.querySelector(".modal-login").classList.remove("hide");
+		document.querySelector(".modal-login").classList.add("hide");
 		document.querySelector("#modal-content").style.display = "none";
         document.querySelector("#myLogin").style.display = "none";
       };
