--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -423,7 +423,8 @@
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-database.js"></script>
-  <body onLoad="CallModal();CallLogin()">
+  
+  <body onLoad="CallLogin()">
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
     <div class="mymenu">
@@ -625,7 +626,7 @@
            }
 
       function CallLogin() {
-        document.getElementById("myLogin").style.display = "block";
+       // document.getElementById("myLogin").style.display = "block";
 
       }
       
