--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -632,7 +632,7 @@
            }
 
       function CallLogin() {
-       // document.getElementById("myLogin").style.display = "block";
+        document.getElementById("myLogin").style.display = "block";
 
       }
       
