--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -632,8 +632,8 @@
            }
 
       function CallLogin() {
-        document.getElementById("myLogin").style.display = "block";
 
+        document.querySelector("#myLogin").style.display = "block";
       }
       
             // Your web app's Firebase configuration
