--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -358,7 +358,7 @@
       }
       /* The Modal (background) */
       .modal {
-      display: none; /* Hidden by default */
+      display: block; /* Hidden by default */
       position: fixed; /* Stay in place */
       z-index: 1; /* Sit on top */
       padding-top: 150px; /* Location of the box */
@@ -371,7 +371,7 @@
       background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
       }
       .modal-login {
-      display: none; /* Hidden by default */
+      display: block; /* Hidden by default */
       position: fixed; /* Stay in place */
       z-index: 2; /* Sit on top */
       padding-top: 150px; /* Location of the box */
@@ -632,7 +632,7 @@
     <script>
 	
 		window.onload = function() {
- CallLogin();
+ //CallLogin();
  //CallModal();
 }
 
