--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -648,10 +648,10 @@
         showRegistration();
       });
 
-		document.querySelector("#ros-version").disabled = false;
-document.querySelector("#input-file-option").disabled = false;
-document.querySelector("#disabled-button").disabled = false;
-document.querySelector("#list-mangle").disabled = false;
+		document.querySelector("#ros-version").disabled = true
+document.querySelector("#input-file-option").disabled = true;
+document.querySelector("#disabled-button").disabled = true;
+document.querySelector("#copyscript").disabled = true;
 
       const showRegistration = () => {
         document.querySelector("#registration-page").classList.remove("hide");
@@ -765,10 +765,10 @@ document.querySelector("#list-mangle").disabled = false;
         document.querySelector("#homepage").classList.remove("hide");
         document.querySelector("#myLogin").style.display = "none";
 		
-		document.querySelector("#ros-version").disabled = true;
-document.querySelector("#input-file-option").disabled = true;
-document.querySelector("#disabled-button").disabled = true;
-document.querySelector("#list-mangle").disabled = true;
+		document.querySelector("#ros-version").disabled = false;
+document.querySelector("#input-file-option").disabled = false;
+document.querySelector("#disabled-button").disabled = false;
+document.querySelector("#copyscript").disabled = false;
       };
 
       const signOut = () => {
