--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -407,7 +407,7 @@
           </div>
           <table id="mytable" style="margin-top:5px; font-weight:normal;white-space: nowrap;">
             <tr style="background-color: #ddd; " >
-              <td><button type="button" id="bt" onclick="submit()" >Generate Script</button>  <button style="margin-left:5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('output'))">Copy All Script</button></td>
+              <td><button type="button" id="bt" onclick="CheckFunction();submit()" >Generate Script</button>  <button style="margin-left:5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('output'))">Copy All Script</button></td>
             </tr>
             <tr style="font-size:15px;font-weight:normal; background-color: #f9f9f9;">
               <td>
