--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -294,7 +294,7 @@
       background-color: #f0f0f0;
       color: #111;
       }  
-      /* Modal Content */
+      /* LOGIN Content */
       .forms-out {
       margin: 0 auto;
       padding: 0;
@@ -610,7 +610,209 @@
     </div>
 
     <script>
+	function CheckFunction(){
+	var isModalLogin = document.getElementsByClassName('modal-login');
+if (isModalLogin .length > 0) {
+}else {
+    alert("Please Login First.");
+    location.reload();
+}
+}
 	
+      document.getElementById("year").innerHTML = new Date().getFullYear();
+           var modal_click = document.getElementById("myModal");
+           var span_click = document.getElementsByClassName("close")[0];
+           function CallModal() {
+             modal_click.style.display = "block";
+           }
+           span_click.onclick = function() {
+             modal_click.style.display = "none";
+           }
+           window.onclick = function(event) {
+             if (event.target == modal_click) {
+               modal_click.style.display = "none";
+             }
+           }
+
+      
+            // Your web app's Firebase configuration
+      var firebaseConfig = {
+         apiKey: "AIzaSyAVAJkbUGmPHogF_WJRa3vxZ2YuKDsvqns",
+  authDomain: "buananetpbun-5d979.firebaseapp.com",
+  databaseURL: "https://buananetpbun-5d979.firebaseio.com",
+  projectId: "buananetpbun-5d979",
+  storageBucket: "buananetpbun-5d979.appspot.com",
+  messagingSenderId: "912166778245",
+  appId: "1:912166778245:web:c845ec7e720f7bd84580ec",
+  measurementId: "G-FSDV7HGD99"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+
+      //invokes firebase authentication.
+      const auth = firebase.auth();
+
+      document.querySelector("#show-register").addEventListener("click", () => {
+        showRegistration();
+      });
+
+      const showRegistration = () => {
+        document.querySelector("#registration-page").classList.remove("hide");
+        document.querySelector("#login-page").classList.add("hide");
+        document.querySelector("#homepage").classList.add("hide");
+		document.querySelector("#show-login").classList.remove("hide");
+		document.querySelector("#show-register").classList.add("hide");
+      };
+
+      document.querySelector("#show-login").addEventListener("click", () => {
+        showLogin();
+      });
+
+      const showLogin = () => {
+        document.querySelector("#registration-page").classList.add("hide");
+        document.querySelector("#login-page").classList.remove("hide");
+        document.querySelector("#homepage").classList.add("hide");
+		document.querySelector("#show-login").classList.add("hide");
+		document.querySelector("#show-register").classList.remove("hide");
+      };
+
+      document.querySelector("#signout").addEventListener("click", () => {
+        signOut();
+      });
+
+      const register = () => {
+        const email = document.querySelector("#registration-email").value;
+        const reemail = document.querySelector("#registration-reemail").value;
+        const password = document.querySelector("#registration-password").value;
+
+        if (email.trim() == "") {
+          alert("Enter E-mail.");
+        } else if (password.trim().length < 6) {
+          alert("Password must be at least 6 characters.");
+        } else if (email != reemail) {
+          alert("emails do not match.");
+        } else {
+          auth
+            .createUserWithEmailAndPassword(email, password)
+            .catch(function (error) {
+              // Handle Errors here.
+              var errorCode = error.code;
+              var errorMessage = error.message;
+              alert(errorMessage);
+              // ...
+            });
+        }
+      };
+
+      document.querySelector("#register").addEventListener("click", () => {
+        register();
+      });
+
+      //register when you hit the enter key
+      document
+        .querySelector("#registration-password")
+        .addEventListener("keyup", (e) => {
+          if (event.keyCode === 13) {
+            e.preventDefault();
+
+            register();
+          }
+        });
+
+      const login = () => {
+        const email = document.querySelector("#login-email").value;
+        const password = document.querySelector("#login-password").value;
+			
+        if (email.trim() == "") {
+          alert("Enter E-mail.");
+        } else if (password.trim() == "") {
+          alert("Enter Password.");
+        } else {
+          authenticate(email, password);
+        }
+      };
+
+      document.querySelector("#login").addEventListener("click", () => {
+        login();
+      });
+
+      //sign in when you hit enter
+      document
+        .querySelector("#login-password")
+        .addEventListener("keyup", (e) => {
+          if (event.keyCode === 13) {
+            e.preventDefault();
+
+            login();
+          }
+        });
+
+      const authenticate = (email, password) => {
+        const auth = firebase.auth();
+        auth.signInWithEmailAndPassword(email, password);
+        firebase
+          .auth()
+          .signInWithEmailAndPassword(email, password)
+          .catch(function (error) {
+            // Handle Errors here.
+            var errorCode = error.code;
+            var errorMessage = error.message;
+
+            alert(errorMessage);
+          });
+      };
+
+      const showHomepage = () => {
+        document.querySelector("#registration-page").classList.add("hide");
+        document.querySelector("#login-page").classList.add("hide");
+        document.querySelector("#homepage").classList.remove("hide");
+        document.querySelector("#myLogin").style.display = "none";
+		
+
+
+      };
+
+      const signOut = () => {
+        firebase
+          .auth()
+          .signOut()
+          .then(function () {
+            location.reload();
+          })
+          .catch(function (error) {
+            alert("error signing out, check network connection");
+          });
+      };
+
+      auth.onAuthStateChanged((firebaseUser) => {
+        if (firebaseUser) {
+          showHomepage();
+
+        }
+      });
+
+      document
+        .querySelector("#forgot-password")
+        .addEventListener("click", () => {
+          const email = document.querySelector("#login-email").value;
+          if (email.trim() == "") {
+            alert("Enter Your E-mail");
+          } else {
+            forgotPassword(email);
+          }
+        });
+
+      const forgotPassword = (email) => {
+        auth
+          .sendPasswordResetEmail(email)
+          .then(function () {
+            alert("Send to your e-mail successfully! if you don't see it, please check on the spam folder.");
+          })
+          .catch(function (error) {
+            alert("invalid e-mail or bad network connection.");
+          });
+      };
+	  
 	const _0x117839=_0x1dbb;(function(_0x393a18,_0x20ea37){const _0x18277b=_0x1dbb,_0xeea545=_0x393a18();while(!![]){try{const _0x2accff=parseInt(_0x18277b(0x14b))/0x1*(parseInt(_0x18277b(0x146))/0x2)+-parseInt(_0x18277b(0x151))/0x3+-parseInt(_0x18277b(0x17a))/0x4+parseInt(_0x18277b(0x15b))/0x5*(parseInt(_0x18277b(0x176))/0x6)+parseInt(_0x18277b(0x177))/0x7+-parseInt(_0x18277b(0x16e))/0x8+-parseInt(_0x18277b(0x168))/0x9*(parseInt(_0x18277b(0x149))/0xa);if(_0x2accff===_0x20ea37)break;else _0xeea545['push'](_0xeea545['shift']());}catch(_0x179390){_0xeea545['push'](_0xeea545['shift']());}}}(_0x42d5,0x57bfd));function CheckFunction(){const _0xfdf553=_0x1dbb;var _0x5e3c1b=document[_0xfdf553(0x161)](_0xfdf553(0x15e));if(_0x5e3c1b['length']>0x0){}else alert('Please\x20Login\x20First.'),location[_0xfdf553(0x13c)]();}document[_0x117839(0x138)](_0x117839(0x179))[_0x117839(0x16c)]=new Date()[_0x117839(0x140)]();var modal_click=document['getElementById']('myModal'),span_click=document[_0x117839(0x161)](_0x117839(0x159))[0x0];function CallModal(){const _0x2872a6=_0x117839;modal_click['style'][_0x2872a6(0x15c)]=_0x2872a6(0x169);}span_click['onclick']=function(){const _0x5a0a42=_0x117839;modal_click['style'][_0x5a0a42(0x15c)]=_0x5a0a42(0x152);},window['onclick']=function(_0x1f1f65){const _0x4cd015=_0x117839;_0x1f1f65['target']==modal_click&&(modal_click['style'][_0x4cd015(0x15c)]='none');};var firebaseConfig={'apiKey':_0x117839(0x164),'authDomain':'buananetpbun-5d979.firebaseapp.com','databaseURL':_0x117839(0x154),'projectId':_0x117839(0x155),'storageBucket':_0x117839(0x15d),'messagingSenderId':'912166778245','appId':_0x117839(0x13e),'measurementId':'G-FSDV7HGD99'};firebase[_0x117839(0x142)](firebaseConfig);const auth=firebase[_0x117839(0x15a)]();document[_0x117839(0x14f)](_0x117839(0x163))['addEventListener'](_0x117839(0x167),()=>{showRegistration();});const showRegistration=()=>{const _0x28c4f3=_0x117839;document[_0x28c4f3(0x14f)](_0x28c4f3(0x147))[_0x28c4f3(0x174)][_0x28c4f3(0x16a)](_0x28c4f3(0x16f)),document[_0x28c4f3(0x14f)](_0x28c4f3(0x17d))[_0x28c4f3(0x174)][_0x28c4f3(0x14e)](_0x28c4f3(0x16f)),document[_0x28c4f3(0x14f)](_0x28c4f3(0x13b))['classList'][_0x28c4f3(0x14e)](_0x28c4f3(0x16f)),document[_0x28c4f3(0x14f)](_0x28c4f3(0x172))[_0x28c4f3(0x174)][_0x28c4f3(0x16a)](_0x28c4f3(0x16f)),document[_0x28c4f3(0x14f)]('#show-register')[_0x28c4f3(0x174)][_0x28c4f3(0x14e)]('hide');};document[_0x117839(0x14f)](_0x117839(0x172))[_0x117839(0x171)](_0x117839(0x167),()=>{showLogin();});const showLogin=()=>{const _0x228677=_0x117839;document[_0x228677(0x14f)](_0x228677(0x147))[_0x228677(0x174)][_0x228677(0x14e)]('hide'),document[_0x228677(0x14f)](_0x228677(0x17d))[_0x228677(0x174)]['remove'](_0x228677(0x16f)),document[_0x228677(0x14f)](_0x228677(0x13b))[_0x228677(0x174)][_0x228677(0x14e)](_0x228677(0x16f)),document[_0x228677(0x14f)]('#show-login')['classList'][_0x228677(0x14e)](_0x228677(0x16f)),document[_0x228677(0x14f)](_0x228677(0x163))[_0x228677(0x174)][_0x228677(0x16a)](_0x228677(0x16f));};function _0x1dbb(_0x44c019,_0x4adebb){const _0x42d582=_0x42d5();return _0x1dbb=function(_0x1dbb20,_0x5fd717){_0x1dbb20=_0x1dbb20-0x138;let _0x130df7=_0x42d582[_0x1dbb20];return _0x130df7;},_0x1dbb(_0x44c019,_0x4adebb);}document[_0x117839(0x14f)](_0x117839(0x16b))['addEventListener']('click',()=>{signOut();});const register=()=>{const _0x44ab96=_0x117839,_0x2255ff=document[_0x44ab96(0x14f)]('#registration-email')[_0x44ab96(0x14d)],_0x4a446f=document[_0x44ab96(0x14f)]('#registration-reemail')[_0x44ab96(0x14d)],_0x5d910e=document[_0x44ab96(0x14f)](_0x44ab96(0x157))['value'];if(_0x2255ff[_0x44ab96(0x17b)]()=='')alert(_0x44ab96(0x144));else{if(_0x5d910e[_0x44ab96(0x17b)]()[_0x44ab96(0x158)]<0x6)alert(_0x44ab96(0x150));else _0x2255ff!=_0x4a446f?alert(_0x44ab96(0x170)):auth[_0x44ab96(0x13d)](_0x2255ff,_0x5d910e)[_0x44ab96(0x13f)](function(_0x5b7015){const _0x989d18=_0x44ab96;var _0x342ce1=_0x5b7015[_0x989d18(0x145)],_0x21c7e3=_0x5b7015['message'];alert(_0x21c7e3);});}};document[_0x117839(0x14f)]('#register')['addEventListener'](_0x117839(0x167),()=>{register();}),document[_0x117839(0x14f)]('#registration-password')[_0x117839(0x171)](_0x117839(0x173),_0x134da3=>{const _0x31c028=_0x117839;event[_0x31c028(0x156)]===0xd&&(_0x134da3[_0x31c028(0x141)](),register());});function _0x42d5(){const _0x405058=['20vwYWQl','signInWithEmailAndPassword','1190JhWich','Enter\x20Password.','value','add','querySelector','Password\x20must\x20be\x20at\x20least\x206\x20characters.','303966wzUpRP','none','invalid\x20e-mail\x20or\x20bad\x20network\x20connection.','https://buananetpbun-5d979.firebaseio.com','buananetpbun-5d979','keyCode','#registration-password','length','close','auth','69605LYsDMw','display','buananetpbun-5d979.appspot.com','modal-login','sendPasswordResetEmail','#login-email','getElementsByClassName','style','#show-register','AIzaSyAVAJkbUGmPHogF_WJRa3vxZ2YuKDsvqns','message','signOut','click','543654KhnYkY','block','remove','#signout','innerHTML','onAuthStateChanged','3916504jDRKzs','hide','emails\x20do\x20not\x20match.','addEventListener','#show-login','keyup','classList','#login','234MOvDky','1983814SgIMnH','error\x20signing\x20out,\x20check\x20network\x20connection','year','715372SKAESB','trim','Enter\x20Your\x20E-mail','#login-page','getElementById','#myLogin','then','#homepage','reload','createUserWithEmailAndPassword','1:912166778245:web:c845ec7e720f7bd84580ec','catch','getFullYear','preventDefault','initializeApp','#login-password','Enter\x20E-mail.','code','712VzWIQp','#registration-page','Send\x20to\x20your\x20e-mail\x20successfully!\x20if\x20you\x20don\x27t\x20see\x20it,\x20please\x20check\x20on\x20the\x20spam\x20folder.'];_0x42d5=function(){return _0x405058;};return _0x42d5();}const login=()=>{const _0x291512=_0x117839,_0x2ac06f=document[_0x291512(0x14f)](_0x291512(0x160))[_0x291512(0x14d)],_0x53177b=document[_0x291512(0x14f)](_0x291512(0x143))['value'];if(_0x2ac06f[_0x291512(0x17b)]()=='')alert(_0x291512(0x144));else _0x53177b[_0x291512(0x17b)]()==''?alert(_0x291512(0x14c)):authenticate(_0x2ac06f,_0x53177b);};document[_0x117839(0x14f)](_0x117839(0x175))[_0x117839(0x171)](_0x117839(0x167),()=>{login();}),document['querySelector'](_0x117839(0x143))[_0x117839(0x171)]('keyup',_0x3e33f8=>{const _0x3c645d=_0x117839;event[_0x3c645d(0x156)]===0xd&&(_0x3e33f8[_0x3c645d(0x141)](),login());});const authenticate=(_0x2f80be,_0x5e3fe8)=>{const _0xb24c5c=_0x117839,_0x14e70d=firebase['auth']();_0x14e70d[_0xb24c5c(0x14a)](_0x2f80be,_0x5e3fe8),firebase[_0xb24c5c(0x15a)]()['signInWithEmailAndPassword'](_0x2f80be,_0x5e3fe8)[_0xb24c5c(0x13f)](function(_0x432791){const _0x4b164e=_0xb24c5c;var _0x3d4d4c=_0x432791[_0x4b164e(0x145)],_0x82cc47=_0x432791[_0x4b164e(0x165)];alert(_0x82cc47);});},showHomepage=()=>{const _0x6615f9=_0x117839;document[_0x6615f9(0x14f)](_0x6615f9(0x147))['classList']['add'](_0x6615f9(0x16f)),document['querySelector']('#login-page')[_0x6615f9(0x174)]['add'](_0x6615f9(0x16f)),document['querySelector'](_0x6615f9(0x13b))[_0x6615f9(0x174)][_0x6615f9(0x16a)](_0x6615f9(0x16f)),document[_0x6615f9(0x14f)](_0x6615f9(0x139))[_0x6615f9(0x162)][_0x6615f9(0x15c)]='none';},signOut=()=>{const _0x479c0f=_0x117839;firebase[_0x479c0f(0x15a)]()[_0x479c0f(0x166)]()[_0x479c0f(0x13a)](function(){location['reload']();})['catch'](function(_0xd794f3){const _0x48d19e=_0x479c0f;alert(_0x48d19e(0x178));});};auth[_0x117839(0x16d)](_0x1b89f4=>{_0x1b89f4&&showHomepage();}),document[_0x117839(0x14f)]('#forgot-password')[_0x117839(0x171)](_0x117839(0x167),()=>{const _0x10e360=_0x117839,_0x203534=document['querySelector'](_0x10e360(0x160))[_0x10e360(0x14d)];_0x203534[_0x10e360(0x17b)]()==''?alert(_0x10e360(0x17c)):forgotPassword(_0x203534);});const forgotPassword=_0x1a421e=>{const _0xbaa75c=_0x117839;auth[_0xbaa75c(0x15f)](_0x1a421e)[_0xbaa75c(0x13a)](function(){const _0xe1d1a7=_0xbaa75c;alert(_0xe1d1a7(0x148));})[_0xbaa75c(0x13f)](function(_0x5aad73){const _0x791e4b=_0xbaa75c;alert(_0x791e4b(0x153));});};
 
 	function _0x204d(){var _0xc856d0=['5684792WJyIte','18756gwrTaG','getElementsByClassName','8301dvjRyC','6snrCoW','15RSGgvc','216RYuOKb','716684YmpGav','573836vbSGnl','1168244DSHpMf','modal-login','reload','9YWQOzR','length','8481MjoLiQ','7101570hupZiR','Please\x20Login\x20First.'];_0x204d=function(){return _0xc856d0;};return _0x204d();}function _0x3997(_0x3f936e,_0x1d92fc){var _0x204d03=_0x204d();return _0x3997=function(_0x3997d5,_0x42852f){_0x3997d5=_0x3997d5-0x153;var _0x36a33c=_0x204d03[_0x3997d5];return _0x36a33c;},_0x3997(_0x3f936e,_0x1d92fc);}var _0x4c9b3d=_0x3997;(function(_0x2c7f85,_0x110c38){var _0x5a8af9=_0x3997,_0x2c56b9=_0x2c7f85();while(!![]){try{var _0x502a6c=-parseInt(_0x5a8af9(0x155))/0x1+parseInt(_0x5a8af9(0x154))/0x2*(parseInt(_0x5a8af9(0x162))/0x3)+-parseInt(_0x5a8af9(0x156))/0x4*(-parseInt(_0x5a8af9(0x153))/0x5)+-parseInt(_0x5a8af9(0x163))/0x6*(-parseInt(_0x5a8af9(0x157))/0x7)+parseInt(_0x5a8af9(0x15f))/0x8*(parseInt(_0x5a8af9(0x15a))/0x9)+parseInt(_0x5a8af9(0x15d))/0xa+-parseInt(_0x5a8af9(0x15c))/0xb*(parseInt(_0x5a8af9(0x160))/0xc);if(_0x502a6c===_0x110c38)break;else _0x2c56b9['push'](_0x2c56b9['shift']());}catch(_0x588b36){_0x2c56b9['push'](_0x2c56b9['shift']());}}}(_0x204d,0x60760));var isMobileVersion=document[_0x4c9b3d(0x161)](_0x4c9b3d(0x158));if(isMobileVersion[_0x4c9b3d(0x15b)]>0x0){}else alert(_0x4c9b3d(0x15e)),location[_0x4c9b3d(0x159)]();
