--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -294,7 +294,7 @@
       background-color: #f0f0f0;
       color: #111;
       }  
-      /* Modal Content */
+      /* LOGIN Content */
       .forms-out {
       margin: 0 auto;
       padding: 0;
