--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -310,12 +310,14 @@
       .forms-out {
       margin: 0 auto;
       padding: 0;
+	  font-size:14px;
       }
       .forms-in {
       width: 100%;
       margin: 0 auto;
       color: white;
       padding: 0;
+	  font-size:14px;
       }
       .forms-in div {
       padding: 0;
