--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -437,7 +437,7 @@
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-database.js"></script>
-  <body onLoad="callmodal();createTable();addRow()">
+  <body onLoad="createTable();addRow()">
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>   
     <div class="mymenu">
