--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -274,14 +274,13 @@
       background:#ddd;
       text-align:center;
       }
-      .mymenu {
       margin:0 auto;
-      background-color: #ddd;
-      width:550px;
+      background-color: #f9f9f9;
+      width:600px;
       border-radius:0 0 5px 5px;
-      border: 2px solid #ddd;
+      border: 2px solid #f9f9f9;
       font-weight:bold;
-      font-size:13px;
+      font-size:14px;
       }
       .mymenu ul {
       list-style-type: none;
@@ -289,8 +288,8 @@
       padding: 0;
       overflow: hidden;
       background-color: #f9f9f9;
-	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
-	  margin-right:10px;
+      background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+      margin-right:10px;
       }
       .mymenu li {
       float: left;
@@ -303,9 +302,9 @@
       text-decoration: none;
       }
       .mymenu li a:hover {
-      background-color: #bbb;
+      background-color: #f0f0f0;
       color: #111;
-      }		       
+      }  	       
       /* LOGIN Content */
       .forms-out {
       margin: 0 auto;
