--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -274,6 +274,7 @@
       background:#ddd;
       text-align:center;
       }
+      .mymenu {
       margin:0 auto;
       background-color: #f9f9f9;
       width:600px;
