--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -562,7 +562,7 @@ if (isModalLogin .length > 0) {
       document.getElementById("year").innerHTML = new Date().getFullYear();
            var modal_click = document.getElementById("myModal");
            var span_click = document.getElementsByClassName("close")[0];
-           function CallModal() {
+           function callmodal() {
              modal_click.style.display = "block";
            }
            span_click.onclick = function() {
