--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -449,6 +449,7 @@
         <li><a target="_blank" href="https://buananetpbun.github.io">☰ ALL TOOLS</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
+		<li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
       </ul>
 	   	   <div id="homepage" class="hide">
           <button style="width:100px !important; padding:2px; margin:3px" id="signout">Logout</button>
