--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -491,7 +491,7 @@
             </div>
           </div>
           <br>
-          <button style="margin-top:-5px"  type="button" onclick="myFunction(); myCheck();selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button>  
+          <button style="margin-top:-5px"  type="button" onclick="CheckFunction();myFunction(); myCheck();selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button>  
         </div>
         <div style="float:right; width:440px;padding:0 20px 20px 20px;">
           <div style="text-align:center">
@@ -536,7 +536,7 @@
             </div>
           </div>
           <br>
-          <button style="margin-top:-5px" type="button" onclick="myFunction(); myCheck();selectElementContents(document.getElementById('list-output-r2'))">Copy Script</button>
+          <button style="margin-top:-5px" type="button" onclick="CheckFunction();myFunction(); myCheck();selectElementContents(document.getElementById('list-output-r2'))">Copy Script</button>
         </div>
       </div>
       <div class="footer">
@@ -574,6 +574,7 @@
         </div>
       </div>
     </div>
+	</div>
     <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
