--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -449,7 +449,7 @@
       </ul>
       <div id="homepage" class="hide">
         <button style="width:100px !important; padding:2px; margin:3px" id="signout">Logout</button>
-        <span style="font-weight:normal">Welcome back to my tool :) <span style="color:green" id="welcome-email"></span></span>
+        <span style="font-weight:normal"> Welcome [ <span style="color:green" id="welcome-email"></span> ]</span>
       </div>
     </div>
     <div id="wrap">
