--- a/pcc.html
+++ b/pcc.html
@@ -431,7 +431,7 @@
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
       </ul>
       <div id="homepage" class="hide">
-        <button style="width:100px !important; padding:2px; margin:3px" id="signout">Logout</button>
+        <button style="width:100px !important; padding:2px; margin:3px; font-weight:bold" id="signout">Logout</button>
         <span style="font-weight:normal"> Welcome [ <span style="color:green" id="welcome-email"></span> ]</span>
       </div>
     </div>
