--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -457,10 +457,10 @@
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
       </ul>
-	  	  <div id="homepage" class="hide">
-          <button style="width:100px !important; padding:2px; margin:3px" id="signout">Logout</button>
-     <span style="font-weight:normal">Welcome [ <span style="color:green" id="welcome-email"></span> ]</span>
-        </div>
+      <div id="homepage" class="hide">
+        <button style="width:100px !important; padding:2px; margin:3px; font-weight:bold" id="signout">Logout</button>
+        <span style="font-weight:normal"> Welcome [ <span style="color:green" id="welcome-email"></span> ]</span>
+      </div>
     </div>
     <div id="wrap">
       <div class="logo">
