--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -567,7 +567,7 @@
               <input type="email" id="registration-email" placeholder="E-Mail"></input>
               <label>Confirm E-mail</label> 
               <input type="email" id="registration-reemail" autocomplete="disable" placeholder="Confirm E-Mail"></input>
-              <label>Password <span style="font-weight:normal"> - Don't use your real email password !!!</span></label>
+              <label>Password <span style="font-weight:normal; font-size:13px"> - Don't use your real e-mail password.</span></label>
               <input type="password" id="registration-password" placeholder="Password"></input>
               <button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Back to Sign-In</span></span>
