--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -483,6 +483,9 @@
       background-color: rgb(0,0,0); /* Fallback color */
       background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
       }
+	  .modal a {
+	  color:#ffffff !important;
+	  }
 	  .modal-login {
       display: block; /* Hidden by default */
       position: fixed; /* Stay in place */
@@ -495,7 +498,11 @@
       overflow: auto; /* Enable scroll if needed */
       background-color: rgb(0,0,0); /* Fallback color */
       background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	  color:#ffffff !important;
       }
+	  .modal-login a {
+	  color:#ffffff !important;
+	  }
       /* Modal Content */
       .modal-content {
       line-height:1.4;
@@ -508,6 +515,7 @@
       width: 380px;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
       font-weight:bold;
+	  color:#ffffff !important;
       }
       .modal-content p {
       padding:0;
