--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -484,7 +484,7 @@
       background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
       }
 	  .modal a {
-	  color:#ffffff !important;
+	  color:#ff6600 !important;
 	  }
 	  .modal-login {
       display: block; /* Hidden by default */
@@ -498,10 +498,9 @@
       overflow: auto; /* Enable scroll if needed */
       background-color: rgb(0,0,0); /* Fallback color */
       background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-	  color:#ffffff !important;
       }
 	  .modal-login a {
-	  color:#ffffff !important;
+	  color:#ff6600 !important;
 	  }
       /* Modal Content */
       .modal-content {
@@ -515,7 +514,6 @@
       width: 380px;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
       font-weight:bold;
-	  color:#ffffff !important;
       }
       .modal-content p {
       padding:0;
@@ -1034,9 +1032,9 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
         <div class="modal-content">
           <span class="close">&times;</span>
           <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
-          <p><b>PayPal</b>  <a target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
-          <p><b>Saweria</b> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
-          <p><b>Bitcoin</b> <span style="font-size:11px;color:#ff6600">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
+          <p><span style="color:#ffffff !important; font-size:14px">PayPal</span>  <a target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
+          <p><span style="color:#ffffff !important; font-size:14px">Saweria</span> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
+          <p><span style="color:#ffffff !important; font-size:14px">Bitcoin</span> <span style="font-size:11px;color:#ff6600">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
           <br>
           <div style="float:left;margin-right:3px; margin-top:0px">
             <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
