--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -1032,9 +1032,9 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
         <div class="modal-content">
           <span class="close">&times;</span>
           <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
-          <p><span style="color:#ffffff !important; font-size:14px">PayPal</span>  <a target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
-          <p><span style="color:#ffffff !important; font-size:14px">Saweria</span> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
-          <p><span style="color:#ffffff !important; font-size:14px">Bitcoin</span> <span style="font-size:11px;color:#ff6600">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
+          <p><span style="color:#ffffff !important; font-size:14px"><b>PayPal</b></span>  <a target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
+          <p><span style="color:#ffffff !important; font-size:14px"><b>Saweria</b></span> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
+          <p><span style="color:#ffffff !important; font-size:14px"><b>Bitcoin</b></span> <span style="font-size:11px;color:#ff6600">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
           <br>
           <div style="float:left;margin-right:3px; margin-top:0px">
             <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
