--- a/mikrotik-dns-over-https-doh.html
+++ b/mikrotik-dns-over-https-doh.html
@@ -267,6 +267,7 @@
       padding: 8px;
       }
       .mymenu {
+	  z-index: 10;
       margin:0 auto;
       background-color: #f9f9f9;
       width:600px;
@@ -274,6 +275,7 @@
       border: 2px solid #f9f9f9;
       font-weight:bold;
       font-size:14px;
+	  position:relative;
       }
       .mymenu ul {
       list-style-type: none;
