--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -365,6 +365,7 @@
       color:#ff6600;
       } 
       .mymenu {
+	  z-index: 10;
       margin:0 auto;
       background-color: #f9f9f9;
       width:600px;
@@ -372,6 +373,7 @@
       border: 2px solid #f9f9f9;
       font-weight:bold;
       font-size:14px;
+	  position:relative;
       }
       .mymenu ul {
       list-style-type: none;
