--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -270,6 +270,7 @@
       font-weight:normal;
       }
       .mymenu {
+	  z-index: 10;
       margin:0 auto;
       background-color: #f9f9f9;
       width:600px;
@@ -277,6 +278,7 @@
       border: 2px solid #f9f9f9;
       font-weight:bold;
       font-size:14px;
+	  position:relative;
       }
       .mymenu ul {
       list-style-type: none;
