--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -264,6 +264,7 @@
       border: none;
       }
       .mymenu {
+	  z-index: 10;
       margin:0 auto;
       background-color: #f9f9f9;
       width:600px;
@@ -271,6 +272,7 @@
       border: 2px solid #f9f9f9;
       font-weight:bold;
       font-size:14px;
+	  position:relative;
       }
       .mymenu ul {
       list-style-type: none;
