--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -260,6 +260,7 @@
       border: none;
       }
       .mymenu {
+	  z-index: 10;
       margin:0 auto;
       background-color: #f9f9f9;
       width:600px;
@@ -267,6 +268,7 @@
       border: 2px solid #f9f9f9;
       font-weight:bold;
       font-size:14px;
+	  position:relative;
       }
       .mymenu ul {
       list-style-type: none;
